# sol_os

./: .gitignore  Cargo.toml  IMPLEMENTED_RU.md  LICENSE  Makefile  PROGRESS.md  README.md  build.rs  rust-toolchain.toml
disk_files/: HELLO.TXT
disk_files/DOCS/: ABOUT.TXT
kernel/: Cargo.toml
kernel/src/: allocator.rs  console.rs  fat32.rs  framebuffer.rs  gdt.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  pci.rs  pic.rs  serial.rs  shell.rs  storage.rs  timer.rs
src/: main.rs
