[package]
name = "sol-os-builder"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = ["kernel"]
resolver = "3"

[build-dependencies]
bootloader = { version = "=0.11.15", default-features = false, features = ["uefi"] }
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
fscommon = "0.1.1"
gpt = "3.1.0"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

